--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="content__main-xerox">
                <h2><a id="item-two">Xerox и компьютеры</a></h2>
-               <p>Одной из главных вех в карьере Элви стало знакомство с сотрудником исследовательской организации при
+               <p>Одной из главных вех в карьере Элви стало знакомство с сотрудником организации при
                   компании <span>Xerox (Ксерокс) – Диком Шупом.</span> Благодаря их общению Элви всерьез заинтересовался
                   возможностями компьютерных технологий и посетил центр Ксерокс.</p>
                <p>По образованию Рэй Смит был «художником с должностью». Именно поэтому он восторгался, когда увидел
